[tool.poetry]
name = "ai-hedge-fund"
version = "0.1.0"
description = "An AI-powered hedge fund simulation using LLM agents for trading decisions"
authors = []
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.3.0"
langchain-openai = "^0.2.0"
langchain-anthropic = "^0.2.0"
langchain-groq = "^0.2.0"
langgraph = "^0.2.0"
pandas = "^2.1.0"
numpy = "^1.26.0"
requests = "^2.31.0"
python-dotenv = "^1.0.0"
yfinance = "^0.2.40"
tabulate = "^0.9.0"
colorama = "^0.4.6"
pydantic = "^2.5.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
black = "^23.9.0"
isort = "^5.12.0"
flake8 = "^6.1.0"
mypy = "^1.6.0"

[tool.poetry.scripts]
hedge-fund = "src.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry-core.masonry.api"

[tool.black]
# Personal preference: slightly shorter lines for better readability on split screens
line-length = 88
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
